finishing up project 1

--- a/week3/index.html
+++ b/week3/index.html
@@ -9,7 +9,7 @@
 
     <link rel="stylesheet" href="all.css" integrity="sha384-mzrmE5qonljUremFsqc01SB46JvROS7bZs3IO2EmfFsd15uHvIt+Y8vEf7N7fWAU" crossorigin="anonymous">
     <link rel="stylesheet" href="week3b.css">
-
+    <link rel="stylesheet" href="hotel.css">
     <title>Week 3 Exercise</title>
 </head>
 
