--- a/week5/sample.html
+++ b/week5/sample.html
@@ -4,13 +4,14 @@
 <head>
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Sample Responsive Page</title>
-  <link rel="stylesheet" href="sample.css">
+  <link rel="stylesheet" href="style.css">
   <style>
 
   </style>
 </head>
 
 <body>
+
 
   <header>
     <h1>Responsive Example</h1>
@@ -26,13 +27,13 @@
     </nav>
 
     <article>
-      <h2>Article Content</h2>
+      <h2>Main Content</h2>
       <img src="sample.jpg" alt="Photo of Dubrovnik">
       <p>This is where the more important content goes.</p>
     </article>
 
     <aside>
-      <h2>Aside</h2>
+      <h2>About</h2>
       <p>This is lower priority content.</p>
     </aside>
   </main>
