--- a/index.html
+++ b/index.html
@@ -20,6 +20,8 @@
             <li>Exercise 1</li>
             <li>Exercise 2</li>
             <li><a href="week3/index.html" target="blank">Exercise 3</a></li>
+            <li><a href="week5/sample.html" target="blank">Exercise 5</a></li>
+
         </ul>
     </div>
 
