--- a/index.html
+++ b/index.html
@@ -21,6 +21,7 @@
             <li>Exercise 2</li>
             <li><a href="week3/index.html" target="blank">Exercise 3</a></li>
             <li><a href="week5/sample.html" target="blank">Exercise 5</a></li>
+            <li><a href="week6/holygrail.html" target="blank">Exercise 6</a></li>
 
         </ul>
     </div>
