--- a/index.html
+++ b/index.html
@@ -22,6 +22,10 @@
             <li><a href="week3/index.html" target="blank">Exercise 3</a></li>
             <li><a href="week5/sample.html" target="blank">Exercise 5</a></li>
             <li><a href="week6/holygrail.html" target="blank">Exercise 6</a></li>
+            <li><a href="week6b/holygrail.html" target="blank">Exercise 6b</a></li>
+            <li><a href="week6b/responsive-grid.html" target="blank">Exercise 6c</a></li>
+
+
 
         </ul>
     </div>
