--- a/index.html
+++ b/index.html
@@ -22,8 +22,8 @@
             <li><a href="week3/index.html" target="blank">Exercise 3</a></li>
             <li><a href="week5/sample.html" target="blank">Exercise 5</a></li>
             <li><a href="week6/holygrail.html" target="blank">Exercise 6</a></li>
-            <li><a href="week6b/holygrail.html" target="blank">Exercise 6b</a></li>
             <li><a href="week6b/responsive-grid.html" target="blank">Exercise 6c</a></li>
+            <li><a href="week7/index.html" target="blank">Exercise 7</a></li>
 
 
 
