--- a/index.html
+++ b/index.html
@@ -24,6 +24,7 @@
             <li><a href="week6/holygrail.html" target="blank">Exercise 6</a></li>
             <li><a href="week6b/responsive-grid.html" target="blank">Exercise 6c</a></li>
             <li><a href="week7/index.html" target="blank">Exercise 7</a></li>
+            <li><a href="week8/animation.html" target="blank">Exercise 8</a></li>
 
 
 
