--- a/index.html
+++ b/index.html
@@ -27,6 +27,7 @@
             <li><a href="week8/animation.html" target="blank">Exercise 8</a></li>
             <li><a href="week8_svg/svgdemo.html" target="blank">Exercise 8 SVG</a></li>
             <li><a href="week9/dom-exercise.html" target="blank">DOM Exercise 1</a></li>
+            <li><a href="week9b/dom-exercise2.html" target="blank">DOM Exercise 2</a></li>
 
 
 
