added the new exercise

--- a/index.html
+++ b/index.html
@@ -29,6 +29,7 @@
             <li><a href="week9/dom-exercise.html" target="blank">DOM Exercise 1</a></li>
             <li><a href="week9b/dom-exercise2.html" target="blank">DOM Exercise 2</a></li>
             <li><a href="week9_functions/function-examples/functions-exercise.html" target="blank">Week 9 Functions Exercise</a></li>
+            <li><a href="week9_functions/event-examples/events-exercise.html" target="blank">JS Events Exercise</a></li>
 
 
 
