--- a/index.html
+++ b/index.html
@@ -30,6 +30,7 @@
             <li><a href="week9b/dom-exercise2.html" target="blank">DOM Exercise 2</a></li>
             <li><a href="week9_functions/function-examples/functions-exercise.html" target="blank">Week 9 Functions Exercise</a></li>
             <li><a href="week9_functions/event-examples/events-exercise.html" target="blank">JS Events Exercise</a></li>
+            <li><a href="week10/webstorage/webstorage-exercise.html" target="blank">JS Web Storage Exercise</a></li>
 
 
 
