--- a/index.html
+++ b/index.html
@@ -31,6 +31,7 @@
             <li><a href="week9_functions/function-examples/functions-exercise.html" target="blank">Week 9 Functions Exercise</a></li>
             <li><a href="week9_functions/event-examples/events-exercise.html" target="blank">JS Events Exercise</a></li>
             <li><a href="week10/webstorage/webstorage-exercise.html" target="blank">JS Web Storage Exercise</a></li>
+            <li><a href="week10/webservices/maps_start.html" target="blank">JS Web Services Exercise</a></li>
 
 
 
