--- a/index.html
+++ b/index.html
@@ -32,6 +32,7 @@
             <li><a href="week9_functions/event-examples/events-exercise.html" target="blank">JS Events Exercise</a></li>
             <li><a href="week10/webstorage/webstorage-exercise.html" target="blank">JS Web Storage Exercise</a></li>
             <li><a href="week10/webservices/maps_start.html" target="blank">JS Web Services Exercise</a></li>
+            <li><a href="week10/hasque_portfolio/index.html" target="blank">Project 2</a></li>
 
 
 
