added my portfolio to projects

--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
         <h4> Projects</h4>
             <ul>
                 <li>Project 1</li>
-                <li><a href="week10/hasque_portfolio/index.html" target="blank">Project 2</a></li>
+                <li><a href="hasque_portfolio/index.html" target="blank">Project 2</a></li>
                 <li>Project 3</li>
             </ul>
     </div>
