added ajax exercise

--- a/index.html
+++ b/index.html
@@ -34,6 +34,7 @@
             <li><a href="week10/webservices/maps_start.html" target="blank">JS Web Services Exercise</a></li>
             <li><a href="exercises/index.html" target="blank">The JS exercise on 11/8/18</a></li>
             <li><a href="week12a/pixel-artist-grid-start.html" target="blank">Week 12: Pixel Artist Exercise</li>
+            <li><a href="ajax/ajax-query.html" target="blank">Week 14 AJAX Exercise</li>
 
 
 
