added week14 php

--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
             <li><a href="exercises/index.html" target="blank">The JS exercise on 11/8/18</a></li>
             <li><a href="week12a/pixel-artist-grid-start.html" target="blank">Week 12: Pixel Artist Exercise</li>
             <li><a href="ajax/ajax-query.html" target="blank">Week 14 AJAX Exercise</li>
-
+            <li><a href="http://hm1254.cad.rit.edu/formmail/form.html" target="blank">Week 14 Homework Exercise: PHP Email Form</li>
 
 
         </ul>
