--- a/index.html
+++ b/index.html
@@ -36,6 +36,7 @@
             <li><a href="week12a/pixel-artist-grid-start.html" target="blank">Week 12: Pixel Artist Exercise</li>
             <li><a href="ajax/ajax-query.html" target="blank">Week 14 AJAX Exercise</li>
             <li><a href="http://hm1254.cad.rit.edu/formmail/form.html" target="blank">Week 14 Homework Exercise: PHP Email Form</li>
+                <li><a href="fall2018final/fall2018final.html" target="blank">FINAL</li>
 
 
         </ul>
