--- a/portfolio/about.html
+++ b/portfolio/about.html
@@ -42,7 +42,7 @@
       <a href="index.html"><p> Hasque</p> </a>
       <ol>
         <a href="index.html"><li>Work</li></a>
-        <li><a href="https://drive.google.com/file/d/1wI4riYtowb7MrkQ7pnaNvzIYW5RumsNf/view" target="_blank">Resume</a></li>
+        <li><a href="resume.html">Resume</a></li>
         <a href="about.html"><li>About</li></a>
       </ol>
 
