--- a/portfolio/cofolios_casestudy.html
+++ b/portfolio/cofolios_casestudy.html
@@ -42,8 +42,10 @@
     <a href="index.html"> <p> Hasque</p> </a>
       <ol>
         <a href="index.html"><li>Work</li></a>
-        <li><a href="https://drive.google.com/file/d/1wI4riYtowb7MrkQ7pnaNvzIYW5RumsNf/view" target="_blank">Resume</a></li>
+        <li><a href="resume.html">Resume</a></li>
         <a href="about.html"><li>About</li></a>
+        <a href="documentation.html"><li>documentation</li></a>
+
       </ol>
 
     </nav>
