--- a/portfolio/stor_casestudy.html
+++ b/portfolio/stor_casestudy.html
@@ -41,8 +41,10 @@
     <a href="index.html"> <span class="black"><p> Hasque</p></span> </a>
       <ol>
         <a href="index.html"><span class="black"><li>Work</li></span></a>
-        <li><a href="https://drive.google.com/file/d/1wI4riYtowb7MrkQ7pnaNvzIYW5RumsNf/view" target="_blank"><span class="black">Resume</span></a></li>
+        <li><a href="resume.html">Resume</span></a></li>
         <a href="about.html"><span class="black"><li>About</li></span></a>
+        <a href="documentation.html"><li>documentation</li></a>
+
       </ol>
 
     </nav>
