added some fixed to a lot of things
documentstation
nav
resume
wireframes
documentation

--- a/portfolio/dailies_casestudy.html
+++ b/portfolio/dailies_casestudy.html
@@ -46,6 +46,8 @@
         <a href="index.html"><li>Work</li></a>
         <li><a href="resume.html">Resume</a></li>
         <a href="about.html"><li>About</li></a>
+        <a href="documentation.html"><li>Documentation</li></a>
+
       </ol>
 
     </nav>
