--- a/portfolio/stor_casestudy.html
+++ b/portfolio/stor_casestudy.html
@@ -43,7 +43,7 @@
         <a href="index.html"><span class="black"><li>Work</li></span></a>
         <li><a href="resume.html">Resume</span></a></li>
         <a href="about.html"><span class="black"><li>About</li></span></a>
-        <a href="documentation.html"><li>documentation</li></a>
+        <a href="documentation.html"><li>Documentation</li></a>
 
       </ol>
 
