--- a/portfolio/resume.html
+++ b/portfolio/resume.html
@@ -45,7 +45,7 @@
         <a href="index.html"><li>Work</li></a>
         <li><a href="resume.html">Resume</a></li>
         <a href="about.html"><li>About</li></a>
-        <a href="documentation.html"><li>documentation</li></a>
+        <a href="documentation.html"><li>Documentation</li></a>
 
       </ol>
 
