--- a/portfolio/about.html
+++ b/portfolio/about.html
@@ -16,6 +16,7 @@
   <!-- FONT
   –––––––––––––––––––––––––––––––––––––––––––––––––– -->
  <link href="https://fonts.googleapis.com/css?family=Roboto" rel="stylesheet">
+ <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
 
   <!-- CSS
   –––––––––––––––––––––––––––––––––––––––––––––––––– -->
@@ -40,13 +41,15 @@
     <nav>
 
       <a href="index.html"><p> Hasque</p> </a>
+      <div class="menu"><p>menu</p></div>
+      <div class="hide-me">
       <ol>
         <a href="index.html"><li>Work</li></a>
         <li><a href="resume.html">Resume</a></li>
         <a href="about.html"><li>About</li></a>
         <a href="documentation.html"><li>Documentation</li></a>
-
       </ol>
+    </div>
 
     </nav>
 </div>
@@ -153,6 +156,20 @@
 </div>
 
 
+
+<script>
+
+
+    $(".hide-me").hide(); //hide menu
+   
+   
+   $(".menu").click(function(){ // click the menu
+     $(".hide-me").toggle(); // toggle between showing and hiding elements
+   
+   });
+   
+   
+     </script>
 <!-- End Document
   –––––––––––––––––––––––––––––––––––––––––––––––––– -->
 </body>
