--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
             <ul>
                 <li>Project 1</li>
                 <li><a href="portfolio/index.html" target="blank">Project 2</a></li>
-                <li>Project 3</li>
+                <li><a href="portfolio/index.html" target="blank">Project 3</a></li>
             </ul>
     </div>
 </div>
